--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  width: 40vmin;
+  /* height: 30vmin; */
   pointer-events: none;
 }
 
@@ -39,7 +40,13 @@
   }
 }
 
+h1{
+  font-family:Georgia, 'Times New Roman', Times, serifs;
+  
+}
+
 .flex{
+  width: 100%;
   display: inline-flex;
   justify-content: center;
   padding: 10px;
@@ -47,13 +54,29 @@
 }
 
 .btn {
-  background-color: blue;
-  color: white;
-  padding: 10px 20px;
+  background-color: black;
+    color: white;
+    /* height: 100%;
+    width: 100%; */
+    -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+    -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+    box-shadow: 0px 0px 45px 21px rgba(255, 46, 192, 0.9);
+    border: 2px solid white;
+    border-radius: 20px;
+    margin-top: 10px;
+    padding: 14px 30px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.btn:hover{
+  color: black;
+  background-color: white;
+  border: 2px solid black;
 }
 
 .image {
-  height: 100%px;
+  height: 100%;
   width: 100%;
   -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
     -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
@@ -65,7 +88,41 @@
 .shadowBox{
   margin: 0 auto;
   /* box-shadow: 0px 9px 30px 0px rgba(255, 149, 5, 0.3); */
-  width: 30%;
-  height: 30%;
+  width: 20%;
+  height: 20%;
   border-radius: 20px;
+  margin-bottom: 4%;
 }
+.shadowBox:hover{
+  height: 100%;
+  width: 100%;
+}
+
+.width{
+  word-wrap: break-word;
+  margin: 0 auto;
+  width: 50%;
+}
+
+.margin-bottom{
+  margin-bottom: 4%;
+}
+
+textarea{
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  height: 100%;
+    width: 100%;
+    -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+    -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+    box-shadow: 0px 0px 45px 21px rgba(255, 46, 192, 0.9);
+    border: 2px solid white;
+    border-radius: 20px;
+    padding: 10px;
+  }
+
+  ::placeholder{
+    color: white;
+    font-size: 20px;
+  }
