--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ nav {
   width: 100%;
 }
 
+.head {
+  margin: 24px 10px;
+}
+nav{
+  background-color: #333;
+}
+
 nav ul {
   background-color: #333;
   list-style-type: none;
@@ -22,8 +29,9 @@ nav ul {
   overflow: hidden;
 }
 
-nav ul li {
+.topnav ul li {
   float: left;
+  display: block;
 }
 
 li a {
@@ -41,8 +49,9 @@ li a:hover {
 }
 
 .open-btn {
-  padding: 14px;
-  background-color: #141212;
+  margin-top: 2px;
+  padding: 11px;
+  background-color: #333;
   color: white;
   font-size: 20px;
   border: 0;
@@ -50,24 +59,23 @@ li a:hover {
 
 .open-btn:hover {
   background-color: rgb(97, 218, 251);
-    color: #333;
+  color: #333;
 }
-
 
 .float-right {
   float: right;
   display: block;
-  padding: 14px 16px;
+  padding: 16px 16px;
   text-align: center;
   color: white;
 }
 
 /* !Contact me Modal in Navbar */
 
-.modal{
+.modal {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 15px;
   right: 0;
   bottom: 0;
   background-color: rgba(25, 17, 17, 0.6);
@@ -75,20 +83,23 @@ li a:hover {
   align-items: center;
   justify-content: center;
 }
-.modal-content{
-  background-color: gray;
+
+.modal-content {
+  max-width: 1000px;
+  background-color: #333;
   border-radius: 20px;
-  width: 70%;
+  width: 75%;
 }
 
-.modal-header, .modal-footer{
+.modal-header,
+.modal-footer {
   padding: 10px;
   margin: 10px;
 }
 
 .modal-title {
   margin: 0;
-  color: #333;
+  color: white;
   font-size: 30px;
 }
 
@@ -99,15 +110,17 @@ li a:hover {
 }
 
 .modal-btn {
+  font-size: 20px;
   margin-top: 10px;
-    width: 60%;
-    background-color: #9a120d;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  width: 60%;
+  background-color: #9a120d;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
+
 .modal-btn:hover {
   background-color: #c81711;
 }
@@ -212,11 +225,6 @@ h1 {
   margin-bottom: 4%;
 }
 
-/* .shadowBox:hover {
-  height: 100%;
-  width: 100%;
-} */
-
 .width {
   word-wrap: break-word;
   margin: 0 auto;
@@ -233,13 +241,13 @@ h1 {
   background-color: black;
   color: white;
   height: 100%;
-  width: 50%;
+  width: 43%;
   -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
   -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
   box-shadow: 0px 0px 45px 21px rgba(255, 46, 192, 0.9);
   border: 2px solid white;
   border-radius: 20px;
-  padding: 10px;
+  padding: 20px;
 }
 
 ::placeholder {
@@ -253,6 +261,7 @@ h1 {
 }
 
 .heading {
+  margin-top: 5%;
   font-family: 'Tilt Prism', cursive;
   font-size: 60px;
 }
@@ -287,12 +296,14 @@ h1 {
 }
 
 .text-area {
+  max-width: 1000px;
   background-color: #333;
+  color: whitesmoke;
   font-size: 20px;
   box-shadow: none;
   border: 4px solid whitesmoke;
   padding: 20px;
-  margin: 10px;
+  margin-top: 4%;
   width: 80%;
 }
 
@@ -314,6 +325,7 @@ h1 {
 
 
 /* ! Contact me form */
+
 input[type=text],
 input[type=email],
 textarea {
@@ -328,11 +340,12 @@ form label {
   font-size: 1.5rem;
   padding: 12px 12px 12px 0;
   display: inline-block;
-  color: black;
+  color: white
 }
 
 input[type=submit] {
-  margin-top: 10px;
+  font-size: 20px;
+  margin-top: 15px;
   width: 80%;
   background-color: #220d9a;
   color: white;
@@ -344,6 +357,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
+
   background-color: #2520bc;
 }
 
@@ -368,4 +382,16 @@ input[type=submit]:hover {
   content: "";
   display: table;
   clear: both;
+}
+
+#from_name::placeholder{
+  color: #212121;
+}
+
+#message::placeholder{
+  color: #212121;
+}
+
+#reply_to::placeholder{
+  color: #212121;
 }
