--- a/src/views/ChatDemo.css
+++ b/src/views/ChatDemo.css
@@ -55,3 +55,11 @@
 .action-btn:hover {
     background-color: black;
 }
+
+.result-text {
+    font-size: 20px;
+    padding-top: 30px;
+    margin: 0 auto;
+    text-align: center;
+    width: 50%;
+}
