--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,20 @@
     transform: rotate(360deg);
   }
 }
+
+::-webkit-scrollbar {
+  width: 15px;
+  background-color: #333;
+}
+
+::-webkit-scrollbar-track {
+  border-top: black;  margin-top: 50px;
+    -webkit-box-shadow: inset 0 0 6px #333;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 10px rgba(243, 238, 238, 0.9);
+}
+
