--- a/src/components/LoadingSpinner.css
+++ b/src/components/LoadingSpinner.css
@@ -9,12 +9,16 @@
 }
 
 .loadingSpinner {
-    width: 50px;
-    height: 50px;
-    border: 10px solid #f3f3f3;
-    border-top: 10px solid #385769;
+    width: 80px;
+    height: 80px;
+    border: 10px solid rgb(255, 46, 192);
+    -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+        -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+        box-shadow: 0px 0px 45px 21px rgba(255, 46, 192, 0.9);
+    border-top: 10px solid white;
     border-radius: 50%;
-    animation: spinner 1.5s linear infinite;
+    outline: 4px solid black;
+    animation: spinner .90s linear infinite;
 }
 
 .spinnerContainer {
