--- a/src/views/DalleDemo.css
+++ b/src/views/DalleDemo.css
@@ -2,10 +2,6 @@
 
 /* ! Dalle Demo CSS */
 
-h1 {
-    font-family: Georgia, 'Times New Roman', Times, serifs;
-
-}
 
 .flex {
     width: 100%;
@@ -18,14 +14,13 @@ h1 {
 .btn {
     background-color: black;
     color: white;
-    /* height: 100%;
-    width: 100%; */
     -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
     -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
     box-shadow: 0px 0px 45px 21px rgba(255, 46, 192, 0.9);
     border: 2px solid white;
     border-radius: 20px;
     margin-top: 10px;
+    margin-bottom: 40px;
     padding: 14px 30px;
     font-size: 20px;
     cursor: pointer;
@@ -37,9 +32,15 @@ h1 {
     border: 2px solid black;
 }
 
+.img-btn{
+    background-color: black;
+    border: none;
+    cursor: pointer;
+}
+
 .image {
-    height: 20%;
-    width: 20%;
+    height: 40%;
+    width: 40%;
     -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
     -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
     box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
@@ -47,9 +48,14 @@ h1 {
     border-radius: 20px;
 }
 
-.image:hover {
-    height: 40%;
-    width: 40%;
+.image-big {
+    height: 80%;
+    width: 80%;
+    -webkit-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+    -moz-box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+    box-shadow: 0px 0px 56px 21px rgba(255, 46, 192, 0.9);
+    border: 2px solid white;
+    border-radius: 20px;
 }
 
 .shadowBox {
@@ -100,4 +106,37 @@ h1 {
     margin-top: 5%;
     font-family: 'Tilt Prism', cursive;
     font-size: 60px;
+}
+
+textarea::-webkit-scrollbar {
+    width: 3px;
+}
+
+@media screen and (max-width:1020px) {
+    .image {
+        height: 45%;
+        width: 45%;
+    }
+    
+    .image-big{
+        height: 75%;
+        width: 75%;
+        margin: 35px 0;
+    }
+
+    .image:hover {
+        height: 45%;
+        width: 45%;
+    }
+
+    .flex {
+        margin-top: 20px;
+        padding: 0;
+    }
+    
+    .textarea{
+        margin-bottom: 30px;
+        padding: 25px
+    }
+
 }
