--- a/src/views/ChatDemo.css
+++ b/src/views/ChatDemo.css
@@ -35,6 +35,7 @@
     font-size: 20px;
     box-shadow: none;
     border: 4px solid whitesmoke;
+    border-radius: 20px;
     padding: 20px;
     margin-top: 4%;
     width: 80%;
@@ -46,7 +47,8 @@
     font-family: tilt prism;
     font-size: 30px;
     padding: 8px 16px;
-    margin-top: 20px;
+    margin: 20px 0;
+
     border-radius: 15px;
     cursor: pointer;
     border: 4px solid whitesmoke;
@@ -58,8 +60,20 @@
 
 .result-text {
     font-size: 20px;
-    padding-top: 30px;
+    padding: 30px;
     margin: 0 auto;
     text-align: center;
-    width: 50%;
+    border: 2px solid white;
+    border: 2px solid white;
+    border-radius: 20px;
+    width: 60%;
+}
+
+
+.imageChat {
+    margin-bottom: 20px;
+    height: 40%;
+    width: 40%;
+    border: 2px solid white;
+    border-radius: 20px;
 }
